# G-PIES

./: .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE  Makefile  README.md  build.cmd  build.sh  cluster_dynamics  cluster_dynamics.cpp  cluster_dynamics.hpp  config.yaml  conversions.hpp  main.cpp  material.hpp  nuclear_reactor.hpp  pandastest.py
.github/workflows/: cpp-coverage.yml  cpp-full.yml  cpp-smoke.yml  cpp.yml  cpplint.yml  jekyll-gh-pages.yml  pages.yml  release.yml  static.yml  tests-cpp-linux.yml  tests-cpp-macos.yml  tests-cpp-windows.yml  tests-cpp.yml
cli/: CMakeLists.txt  arg_consumer.hpp  cd_cli.cpp  db_cli.cpp  gpies.cpp
cmake/: GpiesCodeCoverageTarget.cmake  GpiesSetupBZip2.cmake  GpiesSetupBoost.cmake  GpiesSetupCMakeModules.cmake  GpiesSetupCompilers.cmake  GpiesSetupCuda.cmake  GpiesSetupDependencies.cmake  GpiesSetupGoogleTest.cmake  GpiesSetupSQLite3.cmake  GpiesSetupSundials.cmake  GpiesSetupYamlCpp.cmake
db/: clear.sql  init.sql
docs/: BackendDoxyfile  InterfaceDoxyfile  LaTeXMacrofile  mainpage.md  makefile.md
docs/html/: CMakeLists_8txt.html  annotated.html  blob__converter_8hpp.html  blob__converter_8hpp__incl.map  blob__converter_8hpp__incl.md5  blob__converter_8hpp_source.html  classBlobConverter-members.html  classBlobConverter.html  classClusterDynamics-members.html  classClusterDynamics.html  classClusterDynamicsCpuImpl-members.html  classClusterDynamicsCpuImpl.html  classClusterDynamicsCpuImpl__coll__graph.map  classClusterDynamicsCpuImpl__coll__graph.md5  classClusterDynamicsCpuImpl__inherit__graph.map  classClusterDynamicsCpuImpl__inherit__graph.md5  classClusterDynamicsCudaImpl-members.html  classClusterDynamicsCudaImpl.html  classClusterDynamicsCudaImpl__coll__graph.map  classClusterDynamicsCudaImpl__coll__graph.md5  classClusterDynamicsCudaImpl__inherit__graph.map  classClusterDynamicsCudaImpl__inherit__graph.md5  classClusterDynamicsException-members.html  classClusterDynamicsException.html  classClusterDynamicsException__coll__graph.map  classClusterDynamicsException__coll__graph.md5  classClusterDynamicsException__inherit__graph.map  classClusterDynamicsException__inherit__graph.md5  classClusterDynamicsImpl-members.html  classClusterDynamicsImpl.html  classClusterDynamicsImpl__coll__graph.map  classClusterDynamicsImpl__coll__graph.md5  classClusterDynamicsImpl__inherit__graph.map  classClusterDynamicsImpl__inherit__graph.md5  classGpiesException-members.html  classGpiesException.html  classGpiesException__inherit__graph.map  classGpiesException__inherit__graph.md5  classRandomizer-members.html  classRandomizer.html  (+279 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+89 more)
example/: cd_example.cpp  db_example.cpp  macos_linux.cpp  main.cpp  py_example.py  timer.hpp
include/: client_db.hpp  cluster_dynamics.hpp  cluster_dynamics_state.hpp  db_queries.hpp  gpies_exception.hpp  material.hpp  nuclear_reactor.hpp
include/client_db/: client_db.hpp  db_queries.hpp  simulation_model.hpp
include/cluster_dynamics/: cluster_dynamics.hpp  cluster_dynamics_config.hpp  cluster_dynamics_exception.hpp  cluster_dynamics_state.hpp
include/model/: history_simulation.hpp  material.hpp  material_impl.hpp  nuclear_reactor.hpp  nuclear_reactor_impl.hpp  simulation_model.hpp
include/utils/: arg_consumer.hpp  blob_converter.hpp  constants.hpp  conversions.hpp  datetime.hpp  diagnostics.hpp  gpies_exception.hpp  progress_bar.hpp  randomizer.hpp  sensitivity_variable.hpp  timer.hpp  types.hpp  yaml_consumer.hpp
rootui/: ui_main.cpp
shader/metal/: cluster_dynamics.metal
src/: CPPLINT.cfg  client_db.cpp  cluster_dynamics.cpp  cluster_dynamics.cu  cluster_dynamics_impl.cpp  cluster_dynamics_impl.hpp  nuclear_reactor_impl.hpp
src/client_db/: CMakeLists.txt  client_db.cpp  client_db_impl.cpp  client_db_impl.hpp  db_queries.cpp  db_queries.hpp
src/client_db/entities/: entity_descriptor.hpp  history_simulation.cpp  history_simulation.hpp  material.cpp  material.hpp  nuclear_reactor.cpp  nuclear_reactor.hpp  template_instantiation.hpp
src/cluster_dynamics/: CMakeLists.txt  cluster_dynamics.cpp  cluster_dynamics_impl.cpp  cluster_dynamics_impl.hpp  material.cpp  material_impl.hpp  nuclear_reactor.cpp  nuclear_reactor_impl.hpp
src/cluster_dynamics/cpu/: CMakeLists.txt  cluster_dynamics_cpu_impl.cpp  cluster_dynamics_cpu_impl.hpp  cluster_dynamics_impl.cpp  cluster_dynamics_impl.hpp
src/cluster_dynamics/cuda/: CMakeLists.txt  cluster_dynamics_cuda_impl.cpp  cluster_dynamics_cuda_impl.hpp
src/cluster_dynamics/metal/: CMakeLists.txt  cluster_dynamics_metal_args.cpp  cluster_dynamics_metal_args.hpp  cluster_dynamics_metal_impl.cpp  cluster_dynamics_metal_impl.hpp  cluster_dynamics_metal_kernel.cpp  cluster_dynamics_metal_kernel.hpp
src/okmc/: CMakeLists.txt  exporter.hpp  main.cpp  okmc_simulation.cpp  okmc_simulation.hpp  vector3.hpp
src/translator/: .gitignore  CMakeLists.txt  plotter.py  system.txt  system2.txt
src/translator/src_generator/: expression.cpp  expression.h  generator.cpp  generator.h  main.cpp  parse.cpp  parse.h  tokenize.cpp  tokenize.h
src/translator/src_solver/: main.cpp
src/translator/test/: test.cpp
src/ui/: CMakeLists.txt  cd_pylib.py  main.py  wrapper.cpp
src/ui/gui/: build.sh  icon_reasource_rc.py  inputDialog.py  mainwindow.py  mainwindow.ui  mainwindowcontroller.py  mplcanvas.py  pyuic5ismean.py  simulationprocess.py  simulationworker.py  uitopy.sh
src/ui/gui/resources/: resources.qrc  stylesheet.qss
src/ui/gui/simulation/: simulationparams.py  simulationprocess.py  simulationworker.py
src/ui/gui/visualization/: dataaccumulator.py  graphcontroller.py  legendcheckbox.py  mplcanvas.py
test/: CMakeLists.txt  cd_tests.cpp  db_tests.cpp  gtest_helpers.hpp  randomizer.hpp  test_helpers.hpp  tests.cpp
test/client_db/: CMakeLists.txt  entity_test.hpp  history_simulation.cpp  history_simulation.hpp  material.cpp  material.hpp  nuclear_reactor.cpp  nuclear_reactor.hpp
(+13 files in other folders)
