add_executable(gpies ./gpies.cpp)
target_include_directories(gpies PRIVATE ../src/cluster_dynamics)
target_link_libraries(gpies clusterdynamics)
target_link_libraries(gpies clientdb)
target_link_libraries(gpies Boost::program_options)
target_link_libraries(gpies yaml-cpp::yaml-cpp) 

add_executable(db_cli ./db_cli.cpp)
target_include_directories(db_cli PRIVATE ../src/cluster_dynamics)
target_link_libraries(db_cli clientdb)
target_link_libraries(db_cli clusterdynamics)
